@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -22,6 +23,19 @@
   </build>
 
   <dependencies>
+    <!-- Main dependencies -->
+    <dependency>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.microprofile</groupId>
+      <artifactId>microprofile</artifactId>
+      <type>pom</type>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
@@ -58,6 +72,7 @@
     <dependency>
       <groupId>org.primefaces</groupId>
       <artifactId>primefaces</artifactId>
+      <version>7.0</version>
     </dependency>
 
     <dependency>
@@ -71,9 +86,10 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
+    <!-- Test dependencies -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>io.smallrye.config</groupId>
+      <artifactId>smallrye-config</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -81,6 +97,44 @@
       <groupId>org.apache.deltaspike.cdictrl</groupId>
       <artifactId>deltaspike-cdictrl-api</artifactId>
       <version>${deltaspike.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-jcl</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-jul</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -206,5 +260,137 @@
         </plugins>
       </build>
     </profile>
+
+    <!-- Profil zur Installation des WildFly -->
+    <profile>
+      <id>install-wildfly</id>
+      <properties>
+        <version.wildfly>20.0.0.Final</version.wildfly>
+        <installDir>${project.build.directory}</installDir>
+      </properties>
+      <build>
+        <defaultGoal>process-resources</defaultGoal>
+        <plugins>
+          <plugin>
+            <!-- Use dependency plugin for download maven artifacts and copy/unpack -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.0.1</version>
+            <inherited>false</inherited>
+            <configuration>
+              <outputDirectory>${installDir}</outputDirectory>
+            </configuration>
+            <executions>
+              <execution>
+                <id>wildfly</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.wildfly</groupId>
+                      <artifactId>wildfly-dist</artifactId>
+                      <version>${version.wildfly}</version>
+                      <type>zip</type>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <!-- Use antrun plugin for tool specific configurations -->
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>wildfly</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <taskdef
+                      resource="net/sf/antcontrib/antcontrib.properties"
+                      classpathref="maven.plugin.classpath" />
+                    <if>
+                      <not>
+                        <available
+                          file="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status"
+                          type="dir" />
+                      </not>
+                      <then>
+                        <echo
+                          message="Creating WildFly configuration standalone-v5t11-status" />
+                        <copy
+                          todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status">
+                          <fileset
+                            dir="${installDir}/wildfly-${version.wildfly}/standalone">
+                            <exclude
+                              name="configuration/standalone*.xml" />
+                          </fileset>
+                        </copy>
+                        <copy
+                          todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status">
+                          <fileset
+                            dir="${installDir}/wildfly-${version.wildfly}/standalone">
+                            <include
+                              name="configuration/standalone-full.xml" />
+                          </fileset>
+                        </copy>
+                        <copy
+                          todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status/configuration" 
+                          overwrite="true">
+                          <fileset
+                            dir="${basedir}/src/main/wildfly">
+                            <include
+                              name="*.properties" />
+                          </fileset>
+                        </copy>
+                        <java
+                          dir="${basedir}/src/main/wildfly"
+                          jar="${installDir}/wildfly-${version.wildfly}/bin/client/jboss-cli-client.jar"
+                          fork="true" failonerror="true">
+                          <env key="JBOSS_HOME"
+                            path="${installDir}/wildfly-${version.wildfly}" />
+                          <jvmarg
+                            value="--add-modules=java.se" />
+                          <sysproperty
+                            key="jboss.server.base.dir"
+                            path="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status" />
+                          <arg
+                            value="--file=wildfly-setup.cli" />
+                        </java>
+                      </then>
+                    </if>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+
+            <dependencies>
+              <dependency>
+                <groupId>ant-contrib</groupId>
+                <artifactId>ant-contrib</artifactId>
+                <version>20020829</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+
+
+    </profile>
   </profiles>
+
+  <repositories>
+    <repository>
+      <id>prime</id>
+      <url>http://repository.primefaces.org</url>
+    </repository>
+  </repositories>
 </project>
